<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:background="@color/bgHome">

    <TextView
        android:id="@+id/tv_null"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/grey_dark"
        android:text="@string/show_null"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:overScrollMode="never"
        android:orientation="vertical"
        tools:targetApi="lollipop"
        tools:listitem="@layout/item_movie"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"/>

    <TextView
        android:visibility="gone"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_27sdp"
        android:text="@string/load_more"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryGelap"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="gravity"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"/>

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:textSize="@dimen/item_berita_tanggal_size"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/mohon_tunggu"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:visibility="invisible"/>

    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        tools:visibility="visible"
        android:visibility="gone"
        android:id="@+id/shimmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        shimmer:duration="800">

        <include
            layout="@layout/item_content_home_placeholder" />

    </com.facebook.shimmer.ShimmerFrameLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        tools:visibility="visible"
        android:visibility="gone"
        android:id="@+id/shimmer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        shimmer:duration="800">

        <include
            layout="@layout/item_content_home_placeholder" />

    </com.facebook.shimmer.ShimmerFrameLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        tools:visibility="visible"
        android:visibility="gone"
        android:id="@+id/shimmer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        shimmer:duration="800">

        <include
            layout="@layout/item_content_home_placeholder" />

    </com.facebook.shimmer.ShimmerFrameLayout>
</LinearLayout>
